# Tapir

./: .gitignore  .gitlab-ci.yml  .gitmodules  OpenItemsNanoAOD.txt  README.md  README_old.md  README_v2.md  cmsswSetup.sh  hash  logfile.md  setenv_psi.sh  setup.sh  trigger_build.sh
Analyzer/: README.md
Analyzer/python/: BTagLRAnalyzer.py  GenRadiationModeAnalyzer.py  GenTTHAnalyzer.py  JetAnalyzer.py  LeptonAnalyzer.py  MEAnalysis_cfg_heppy.py  MEMAnalyzer.py  MEMUtils.py  METFilterAnalyzer.py  MVAVarAnalyzer.py  NNAnalyzer.py  OutputModule.py  PrimaryVertexAnalyzer.py  QGLRAnalyzer.py  TriggerAnalyzer.py  TriggerTable.py  TriggerWeightAnalyzer.py  WTagAnalyzer.py  boostedAnalyzer.py  nanoTree.py  nanoTreeGenClasses.py  nano_config.py  quickAnalyzer.py  resolvedAnalyzer.py  skimTF.py  tmp.txt  utils.py
Analyzer/test/: BkgEstimation.py  DrawHistogram.py  DrawHistograms.ipynb  PSet.py  Rhalphabet.py  buildRhalphabet.py  computeGenWeights.py  createHistograms.py  datasets.py  evenSimplerJob_nanoAODPostproc.py  evenSimplerJob_nanoAODPostproc_TEST.py  keep_and_drop.txt  massiveHadd.sh  plotTF.py  (+22 more)
MEAnalysis/: sparsinator.cc
MEMAnalyzer/MEMCalculation/mem_dileptonic/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  mem_comparison_dileptonic.cc  mem_dileptonic.cc  ttH_TTToFullyLeptonic_HToBBbar.cc  ttH_TTToFullyLeptonic_HToBBbar.lua  ttbb_TTToFullyLeptonic.lua
MEMAnalyzer/MEMCalculation/ttH_FullyLeptonic/: CMakeLists.txt  ttH_TTToFullyLeptonic_HToBBbar.lua
MEMAnalyzer/MEMCalculation/ttH_FullyLeptonic/MatrixElement/: CMakeLists.txt
MEMAnalyzer/MEMCalculation/ttH_FullyLeptonic/MatrixElement/SubProcesses/P1_Sigma_VLF_Singlet_UFO_gg_epvebemvexbxbbx/: P1_Sigma_VLF_Singlet_UFO_gg_epvebemvexbxbbx.cc  P1_Sigma_VLF_Singlet_UFO_gg_epvebemvexbxbbx.h
MEMAnalyzer/MEMCalculation/ttH_FullyLeptonic/MatrixElement/SubProcesses/P1_Sigma_VLF_Singlet_UFO_gg_epvebmumvmxbxbbx/: P1_Sigma_VLF_Singlet_UFO_gg_epvebmumvmxbxbbx.cc  P1_Sigma_VLF_Singlet_UFO_gg_epvebmumvmxbxbbx.h
MEMAnalyzer/MEMCalculation/ttH_FullyLeptonic/MatrixElement/SubProcesses/P1_Sigma_VLF_Singlet_UFO_gg_mupvmbemvexbxbbx/: P1_Sigma_VLF_Singlet_UFO_gg_mupvmbemvexbxbbx.cc  P1_Sigma_VLF_Singlet_UFO_gg_mupvmbemvexbxbbx.h
MEMAnalyzer/MEMCalculation/ttH_FullyLeptonic/MatrixElement/SubProcesses/P1_Sigma_VLF_Singlet_UFO_gg_mupvmbmumvmxbxbbx/: P1_Sigma_VLF_Singlet_UFO_gg_mupvmbmumvmxbxbbx.cc  P1_Sigma_VLF_Singlet_UFO_gg_mupvmbmumvmxbxbbx.h
MEMAnalyzer/MEMCalculation/ttH_FullyLeptonic/MatrixElement/include/: HelAmps_VLF_Singlet_UFO.h  Parameters_VLF_Singlet_UFO.h  SubProcess.h
MEMAnalyzer/MEMCalculation/ttH_FullyLeptonic/MatrixElement/src/: HelAmps_VLF_Singlet_UFO.cc  Parameters_VLF_Singlet_UFO.cc
NanoAODTools/: README.md
Simulation/: README.md
doc/: TriggerSF.md
(+959 files in other folders)
